[gd_scene load_steps=3 format=3 uid="uid://b8r52laiakw0t"]

[ext_resource type="Script" path="res://Scripts/collider.gd" id="1_ba5p8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gvmj2"]
size = Vector3(3.5435, 26.6731, 19.1127)

[node name="FirstChoiceA" type="Area3D"]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 16.5811, 0.745571, -44.929)
script = ExtResource("1_ba5p8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.844978, -1.82641, -4.59989)

[node name="collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.796265, 0.237, -0.726)
shape = SubResource("BoxShape3D_gvmj2")

[node name="static_cube" type="StaticBody3D" parent="."]

[node name="collision_shape" type="CollisionShape3D" parent="static_cube"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.768887, 0.237, -0.726)
shape = SubResource("BoxShape3D_gvmj2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
